Random bamboo growth

--- a/overlay/index.html
+++ b/overlay/index.html
@@ -13,6 +13,7 @@
         <div id="screen"></div>
     </section>
     <section class="bg-fill">
+        <div id="shoots"></div>
     </section>
 </main>
 </body>
