Add panda that interacts with bamboo

--- a/overlay/index.html
+++ b/overlay/index.html
@@ -14,6 +14,7 @@
     </section>
     <section class="bg-fill">
         <div id="shoots"></div>
+        <div id="panda"></div>
     </section>
 </main>
 </body>
