--- a/overlay/index.html
+++ b/overlay/index.html
@@ -13,6 +13,9 @@
         <div id="screen"></div>
     </section>
     <section class="bg-fill">
+        <div id="text">
+            <h2 id="subtitle"></h2>
+        </div>
         <div id="shoots"></div>
         <div id="panda"></div>
     </section>
