--- a/overlay/index.html
+++ b/overlay/index.html
@@ -5,20 +5,28 @@
 </head>
 <body>
 <main>
-    <section>
-        <div class="bg-fill">
-            <h1 id="title"></h1>
-            <div id="socials"></div>
-        </div>
-        <div id="screen"></div>
-    </section>
-    <section class="bg-fill">
-        <div id="text">
-            <h2 id="subtitle"></h2>
-        </div>
+    <template id="overlay-main">
+        <section>
+            <div class="bg-fill">
+                <h1 id="title"></h1>
+                <div id="socials"></div>
+            </div>
+            <div id="screen"></div>
+        </section>
+        <section class="bg-fill">
+            <div id="text">
+                <h2 id="subtitle"></h2>
+            </div>
+            <div id="shoots"></div>
+            <div id="panda"></div>
+        </section>
+    </template>
+    <template id="overlay-title">
+        <h1 id="title"></h1>
+        <div id="socials"></div>
         <div id="shoots"></div>
         <div id="panda"></div>
-    </section>
+    </template>
 </main>
 </body>
 </html>
