Subtitle on title overlay

--- a/overlay/index.html
+++ b/overlay/index.html
@@ -23,6 +23,7 @@
     </template>
     <template id="overlay-title">
         <h1 id="title"></h1>
+        <h2 id="subtitle"></h2>
         <div id="socials"></div>
         <div id="shoots"></div>
         <div id="panda"></div>
