Some pixel tweaks

--- a/overlay/index.html
+++ b/overlay/index.html
@@ -7,7 +7,10 @@
                 <h1 id="title"></h1>
                 <div id="socials"></div>
             </div>
-            <div id="screen"></div>
+            <div id="screen">
+                <div class="glitch"></div>
+                <div class="glitch"></div>
+            </div>
         </section>
         <section class="bg-fill">
             <div id="text">
