Use pet-panda package + webpack (#10)
* Switch to webpack

* Start using pet panda

* Use pet panda for bamboo divider

* Assorted cleanup

* Tweak font and colors

* Set node version

* Bump pet-panda version

* Some pixel tweaks

* Fix build issue

* Update workflow & deps

--- a/overlay/index.html
+++ b/overlay/index.html
@@ -1,8 +1,4 @@
 <html class="transparent">
-<head>
-    <link href="style.scss" rel="stylesheet" />
-    <script src="script.js"></script>
-</head>
 <body>
 <main>
     <template id="overlay-main">
@@ -11,13 +7,15 @@
                 <h1 id="title"></h1>
                 <div id="socials"></div>
             </div>
-            <div id="screen"></div>
+            <div id="screen">
+                <div class="glitch"></div>
+                <div class="glitch"></div>
+            </div>
         </section>
         <section class="bg-fill">
             <div id="text">
                 <h2 id="subtitle"></h2>
             </div>
-            <div id="shoots"></div>
             <div id="panda"></div>
         </section>
     </template>
@@ -25,7 +23,6 @@
         <h1 id="title"></h1>
         <h2 id="subtitle"></h2>
         <div id="socials"></div>
-        <div id="shoots"></div>
         <div id="panda"></div>
     </template>
 </main>
